Add: content for top 1/4 of section, figuring out font family issue

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>Homepage</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class=container>
-            <div class="header">
+            <div class="top">
+                <div class="header">
+                  <div class="logo">Header Logo</div>
+                    <a href="#">header link one</a>
+                    <a href="#">header link two</a>
+                    <a href="#">header link three</a>   
+                </div>
+                <div class="overview">
+                    <div class="internal">
+                        <h1>This website is awesome</h1>
+                        <p>This website has some subtext that goes here under the main title. It's
+                            a smaller font and the color is lower contrast.</p>
+                        <button>Sign Up</button>    
+                    </div>
+                    <img src="https://images.pexels.com/photos/5745014/pexels-photo-5745014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="this is a placeholder for an image">
+                </div>
             </div>
-            <div class="contents">
+            <div class="information">
             </div>
             <div class="quote">
             </div>
