--- a/index.html
+++ b/index.html
@@ -6,30 +6,35 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class=container>
-            <div class="top">
-                <div class="header">
-                  <div class="logo">Header Logo</div>
-                    <a href="#">header link one</a>
-                    <a href="#">header link two</a>
-                    <a href="#">header link three</a>   
-                </div>
-                <div class="overview">
-                    <div class="internal">
-                        <h1>This website is awesome</h1>
-                        <p>This website has some subtext that goes here under the main title. It's
-                            a smaller font and the color is lower contrast.</p>
-                        <button>Sign Up</button>    
+        <div class="setting">
+            <div class=container>
+                <div class="top">
+                    <div class="tip">
+                        <div class="logo">Header Logo</div>
+                        <div class="directory">
+                            <a href="#">header link one</a>
+                            <a href="#">header link two</a>
+                            <a href="#">header link three</a>       
+                        </div>
                     </div>
-                    <img src="https://images.pexels.com/photos/5745014/pexels-photo-5745014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="this is a placeholder for an image">
+                    <div class="overview">
+                        <div class="internal">
+                            <h1>This website is awesome</h1>
+                            <p>This website has some subtext that goes here under the main title. It's
+                                a smaller font and the color is lower contrast.</p>
+                            <button>Sign Up</button>    
+                        </div>
+                        <img src="https://images.pexels.com/photos/5745014/pexels-photo-5745014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="this is a placeholder for an image">
+                    </div>
                 </div>
-            </div>
-            <div class="information">
-            </div>
-            <div class="quote">
-            </div>
-            <div class="advertisement">
-            </div>
+                <div class="information">
+                </div>
+                <div class="quote">
+                </div>
+                <div class="advertisement">
+                </div>
+            </div>    
         </div>
+        
     </body>
 </html>
