--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Homepage</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="setting">
@@ -22,9 +25,9 @@
                             <h1>This website is awesome</h1>
                             <p>This website has some subtext that goes here under the main title. It's
                                 a smaller font and the color is lower contrast.</p>
-                            <button>Sign Up</button>    
+                            <button>Sign up</button>    
                         </div>
-                        <img src="https://images.pexels.com/photos/5745014/pexels-photo-5745014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="this is a placeholder for an image">
+                        <img src="/images/pexels-ryutaro.jpg" alt="this is a placeholder for an image">
                     </div>
                 </div>
                 <div class="information">
