--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                         <img src="/images/pexels-ryutaro.jpg" alt="this is a placeholder for an image">
                     </div>
                 </div>
-                <div class="information">
+                <div class="second-frame">
+                    <h1> Some random information.</h1>
+                    <div class="content">
+                        <div class="box-container">
+                        </div>
+                    </div>
                 </div>
                 <div class="quote">
                 </div>
