--- a/index.html
+++ b/index.html
@@ -33,7 +33,21 @@
                 <div class="second-frame">
                     <h1> Some random information.</h1>
                     <div class="content">
-                        <div class="box-container">
+                        <div class="image-container">
+                            <div class="box"></div>
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="image-container">
+                            <div class="box"></div>
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="image-container">
+                            <div class="box"></div>
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="image-container">
+                            <div class="box"></div>
+                            <p>This is some subtext under an illustration or image</p>
                         </div>
                     </div>
                 </div>
