Fix: 2nd section complete, alignment issues

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <div class="overview">
                         <div class="internal">
                             <h1>This website is awesome</h1>
-                            <p>This website has some subtext that goes here under the main title. It's
-                                a smaller font and the color is lower contrast.</p>
+                            <p>This website has some subtext that goes here under the main title.  It's
+                                a smaller font and the color is lower contrast</p>
                             <button>Sign up</button>    
                         </div>
                         <img src="/images/pexels-ryutaro.jpg" alt="this is a placeholder for an image">
