--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="quote">
+                <div class="third">
+                    <div class="main-section">
+                        <p><i>This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+                            All I know is that it looks nice.</i></p>  
+                    </div>
+                    <div class="author">
+                        <p>-Thor, God of Thunder</p>    
+                    </div>
+                        
                 </div>
                 <div class="advertisement">
                 </div>
