Add: 4th section completed, fix alignment

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
                         
                 </div>
                 <div class="advertisement">
+                    <div class="newsletter">
+                        <div class="blue-container">
+                            <div class="pitchforks">
+                                <p>Call to action! It's time!</p>
+                                <p>Sign up for our product by clicking that button right over there!</p>    
+                            </div>
+                            
+                            <button>Sign up</button>
+                        </div>    
+                    </div>
+                    <div class="footer">
+                        <p>Copyright &copy The Odin Project 2021</p>
+                    </div>
                 </div>
             </div>    
         </div>
