Update README.md for takeaway section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="tip">
                         <div class="logo">Header Logo</div>
                         <div class="directory">
-                            <a href="#">header link one</a>
+                            <a href="https://www.instagram.com/iroha.illus/">header link one</a>
                             <a href="#">header link two</a>
                             <a href="#">header link three</a>       
                         </div>
