--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 a smaller font and the color is lower contrast</p>
                             <button>Sign up</button>    
                         </div>
-                        <img src="/images/pexels-ryutaro.jpg" alt="this is a placeholder for an image">
+                        <img src="./images/pexels-ryutaro.jpg" alt="this is a placeholder for an image">
                     </div>
                 </div>
                 <div class="second-frame">
